# game-of-life

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: main.c.6E44B6B97EDC4F11.idx
src/: Makefile  main  main.c
